--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: The Income Tax Illustrated
 description: > # this means to ignore newlines until "baseurl:"
 
 meta_image: cover-meta.png
-url: "http://interactive.taxfoundation.org" # the base hostname & protocol for your site
-baseurl: "/income-tax-illustrated"
+url: "http://localhost" # the base hostname & protocol for your site
+baseurl: "/nc-illustrated"
 permalink: :title
 twitter_username: taxfoundation
 # Setup and configure collection for chartbook slides
