--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: The Income Tax Illustrated
+title: North Carolina Illustrated
 description: > # this means to ignore newlines until "baseurl:"
 
 meta_image: cover-meta.png
