--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: North Carolina Illustrated
 description: > # this means to ignore newlines until "baseurl:"
 
 meta_image: cover-meta.png
-url: "http://localhost" # the base hostname & protocol for your site
+url: "http://interactive.taxfoundation.org" # the base hostname & protocol for your site
 baseurl: "/nc-illustrated"
 permalink: :title
 twitter_username: taxfoundation
