--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: North Carolina Illustrated
-description: > # this means to ignore newlines until "baseurl:"
-
-meta_image: cover-meta.png
+description: "Each piece of North Carolina’s new tax code tells a story, and we know how important it is to put that story into a larger context."
+meta_image: cover-meta.jpg
 url: "http://interactive.taxfoundation.org" # the base hostname & protocol for your site
 baseurl: "/nc-illustrated"
 permalink: :title
